[package]
name = "uniject"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Security"] }
sysinfo = "0.35"
iced-x86 = { version = "1", features = ["code_asm"] }
log = "0.4"